# AgentEq

./: .gitignore  README.md  pyproject.toml
app/: cleanup.py  main.py  prepare_instance.py
app/agents/: graph.py
app/core/: artifact_manager.py  logger.py  workspace_manager.py
app/experimentation/: toolscheck.ipynb
app/prompts/: SystemPrompt.py  ToolPrompt.py
app/tools/: Sandbox.py  pySRTool.py  visual_subagent.py
app/workspace/: experiment_log.jsonl
data/: dataexp.ipynb  lsr_synth_matsci_train.csv
