[project]
name = "kepleragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.6.0",
    "e2b-code-interpreter>=2.4.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "pysr>=1.5.9",
    "python-dotenv>=1.2.1",
]
